Rename package to hackathon-cli-todo and publish to PyPI
- Rename package from cli-todo-app to hackathon-cli-todo
- Update README.md with new package name
- Successfully published to PyPI: https://pypi.org/project/hackathon-cli-todo/
- Package is now installable globally with: pip install hackathon-cli-todo

Users can now install and use the app from anywhere on any device!

--- a/PHASE-I-CLI-Todo-app/pyproject.toml
+++ b/PHASE-I-CLI-Todo-app/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "cli-todo-app"
+name = "hackathon-cli-todo"
 version = "0.1.0"
 description = "A simple, elegant command-line todo list application"
 readme = "README.md"
