--- a/PHASE-II-nextjs-app/frontend/frontend-app/package.json
+++ b/PHASE-II-nextjs-app/frontend/frontend-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-select": "^2.2.6",
     "clsx": "^2.1.1",
+    "firebase": "^12.8.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
