--- a/PHASE-II-nextjs-app/frontend/frontend-app/package.json
+++ b/PHASE-II-nextjs-app/frontend/frontend-app/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@radix-ui/react-select": "^2.2.6",
+    "antd": "^6.2.1",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "firebase": "^12.8.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
